--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,9 @@ web_modules/
 .env
 .env.*
 !.env.example
-apps/reverse-proxy/.dev.vars
-apps/reverse-proxy/.dev.vars.*
-!apps/reverse-proxy/.dev.vars.example
+**/*/.dev.vars
+**/*/.dev.vars.*
+!**/*/.dev.vars.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -140,3 +140,18 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# SSH keys
+id_ed25519
+id_ed25519.pub
+id_ed25519.base64
+
+# Pepper key
+pepper.key
+.tmp.md
+
+temp
+.wrangler
+
+# local temp file
+temp.txt
