--- a/apps/reverse-proxy/package.json
+++ b/apps/reverse-proxy/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "module": "src/index.ts",
   "scripts": {
+    "setup": "./scripts/setup-wrangler.sh",
     "test": "bunx vitest run --config vitest.config.ts",
     "test:coverage": "bunx vitest run --coverage --config vitest.config.ts",
     "typecheck": "bunx tsgo --project tsconfig.json",
@@ -13,5 +14,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20251008.0"
+  },
+  "dependencies": {
+    "iconv-lite": "0.7.2"
   }
 }
