--- a/apps/reverse-proxy/wrangler.toml
+++ b/apps/reverse-proxy/wrangler.toml
@@ -9,11 +9,24 @@ binding = "BROWSER"
 
 [[kv_namespaces]]
 binding = "KV"
-id = "7912f4e878ea43408469fdca13632d5c"
+id = "${CLOUDFLARE_KV_NAMESPACE_ID}"
 
 [vars]
-API_DOMAIN = "reverse-proxy.api.kkk4oru.com"
-CACHE_VERSION = "v5"
+API_DOMAIN = "${API_DOMAIN}"
+# IP Rotation configuration (optional)
+# IP_ROTATE_AUTH_TYPE = "api-key"  # or "iam"
+# IP_ROTATE_API_KEY = "${IP_ROTATE_API_KEY}"
+# IP_ROTATE_ENDPOINTS = '''
+# {
+#   "api.example.com": [
+#     "https://abc123.execute-api.us-east-1.amazonaws.com/proxy",
+#     "https://def456.execute-api.eu-west-1.amazonaws.com/proxy"
+#   ]
+# }
+# '''
+# AWS_ACCESS_KEY_ID = "${AWS_ACCESS_KEY_ID}"
+# AWS_SECRET_ACCESS_KEY = "${AWS_SECRET_ACCESS_KEY}"
+# AWS_REGION = "us-east-1"
 
 [observability.logs]
 enabled = true
