--- a/apps/reverse-proxy/wrangler.toml.example
+++ b/apps/reverse-proxy/wrangler.toml.example
@@ -15,7 +15,7 @@ id = "${CLOUDFLARE_KV_NAMESPACE_ID}"
 API_DOMAIN = "${API_DOMAIN}"
 # IP Rotate configuration (optional)
 # Note: For production, consider using `wrangler secret put` for sensitive values
-IP_ROTATE_ENDPOINTS = "${IP_ROTATE_ENDPOINTS}"
+IP_ROTATE_ENDPOINTS = '${IP_ROTATE_ENDPOINTS}'
 IP_ROTATE_AUTH_TYPE = "${IP_ROTATE_AUTH_TYPE}"
 IP_ROTATE_API_KEY = "${IP_ROTATE_API_KEY}"
 IP_ROTATE_AWS_ACCESS_KEY_ID = "${IP_ROTATE_AWS_ACCESS_KEY_ID}"
