feat(proxy): add Cache API toggle configuration
Add ENABLE_CACHE_API environment variable to conditionally enable/disable the Cloudflare Cache API. When disabled, the proxy relies solely on KV storage for caching. This allows for more flexible caching strategies and better control over cache behavior in different deployment environments.

--- a/apps/reverse-proxy/wrangler.toml
+++ b/apps/reverse-proxy/wrangler.toml
@@ -13,6 +13,8 @@ id = "${CLOUDFLARE_KV_NAMESPACE_ID}"
 
 [vars]
 API_DOMAIN = "${API_DOMAIN}"
+# Cache API control (optional, default: false)
+ENABLE_CACHE_API = "${ENABLE_CACHE_API}"
 # IP Rotate configuration (optional)
 # Note: For production, consider using `wrangler secret put` for sensitive values
 IP_ROTATE_ENDPOINTS = '${IP_ROTATE_ENDPOINTS}'
