chore(config): include fetch test in biome configuration

--- a/biome.json
+++ b/biome.json
@@ -249,7 +249,9 @@
       }
     },
     {
-      "includes": ["apps/reverse-proxy/src/ip-rotate/*.test.ts"],
+      "includes": ["apps/reverse-proxy/src/ip-rotate/*.test.ts",
+        "apps/reverse-proxy/src/proxy/fetch.test.ts"
+      ],
       "linter": {
         "rules": {
           "nursery": {
